# cpp-examples

unique-ptr/: CMakeLists.txt  Makefile
unique-ptr/src/: main.cpp
unique-ptr/src/helpers/: scope.h
unique-ptr/src/models/: car.h
